app/assets/stylesheets/revolution.css.scss
@import "variables.css.scss";

/* General/Revolution - this should always stay at the top */
pre.unstyled { padding: 0px; background-color: inherit; border: 0px; }
pre { word-break: normal; }
//button, input { font-family: 'MuliLight', 'Helvetica', 'Arial'; }
.profile_dropdown li { min-width: 130px; }
.profile_dropdown li:hover { color: white; }
.container.body { padding-top: 51px; }
.sexy_buttons {
  float: right;
  font-weight: normal;
  box-shadow: none;
  text-shadow: none;
  margin: 0;
  font-size: 15px;
  border-radius: 3px;
  padding: 7px 20px 5px 20px;
  border: 1px solid #DDD;
  line-height: 18px;
  text-shadow: none !important;
  //&:hover{ box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2); text-decoration: none; color: white; }
  &:hover{ box-shadow: 0px 0px 2px black; text-decoration: none; color: white; }
  &:active{ position: relative; top: 1px; }
}
.submit_button {
  @extend .sexy_buttons;
  background-color: #e9685b;
  color: white;
}
.submit_button_big {
  @extend .submit_button;
  font-size: 18px;
  line-height: 30px;
}
.submit_button_huge {
  @extend .submit_button;
  font-size: 24px;
  padding: 14px 38px;
  line-height: 36px;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
}
.submit_button_green {
  @extend .sexy_buttons;
  background-color: $employer_green;
  color: white;
}
.submit_button_green_big {
  @extend .submit_button_green;
  font-size: 18px;
  line-height: 30px;
}
.submit_button_blue {
  @extend .sexy_buttons;
  background-color: #5BD2E9;
  color: white;
}
.submit_button_blue_big {
  @extend .submit_button_blue;
  font-size: 18px;
  line-height: 30px;
}
.submit_button_standard {
  @extend .sexy_buttons;
  background-color: #DAE1E4;
  color: #333 !important;
  &:hover{ color: #333; }
}
.clear_floats { clear: both;}
/* Offerchat box sizing */
#offerchatbox{ width: 260px !important; }
.widget-box {width: 260px !important;}

/* Stream/Revolution */
.newsfeed h4{ margin:9px 10px 10px 10px; font: 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height:10%; letter-spacing:0.15em; color:#fff; text-shadow:1px 1px 0 rgb(0,0,0); }
.newsfeed p{ margin:0 9px 2px 0; font:300 11px 'Lucida Grande', Tahoma, Verdana, sans-serif; color:#aaa;}
.newsfeed a { text-decoration:none; cursor:pointer; }
.post { padding:12px; }
.post:hover { background-color:#F9F9F9; border-radius: 4px; }
.postheader h3 { display:inline-block; margin: 0px; font-size:18px; line-height:36px; }
.rep_badge_post { height: 12px; vertical-align: baseline; }
.mini_group_icon { height: 20px; width: 20px; margin: 0 2px; position: relative; bottom: 2px;}
.profile_group_icon { position: relative; bottom: 6px; height: 28px; width: 28px; }
.challengename{font-size:12px; color: #999; margin-left:10px;}
.votingandpointsarea { display:inline-block; float:right; margin-top:4px; margin-right:-4px;}
.votingandpointsarea a { padding: 2px 3px 1px 3px;}
.votingandpointsarea div { display: inline-block; margin: 0 1px 0 8px; position:relative; top:1px;}
.votingandpointsarea .up_vote{ position:relative; bottom: 2px; height:15px; width:15px;}
.votingandpointsarea .circle_check{ position: relative; top: 1px; height: 15px; width: 15px;}
.points { font-style:italic; font-weight:bold; font-size:15px; position:relative; bottom:3px; margin-left:4px; }
.postphotospace { display:inline-block; vertical-align: top; margin-right:12px; }
.postspace{display: inline-block;  border-radius: 3px;  box-shadow: 0 2px 4px rgba(0, 0, 0, .05);  background-color:white;  border: 1px solid #ccc;  margin:0 auto 0 auto;  position:relative;font:normal 13px arial, sans-serif;padding: 0 12px;width: 520px;}
.photo{ border-radius:4px; width: 50px; height: 50px; }
.username{ text-decoration: none; color:#005C1F; font-size:17px; }
.posttext { margin: -2px -12px 0 -12px; padding: 9px 12px; background-color:rgb(211, 241, 220); }
.posttext code{padding: 0; margin:0; word-break: normal; background-color: inherit; border: none; color:inherit; cursor:default;}
.leveltext { font-weight: normal; }
.challengetext { font-weight: bold; text-decoration:none; color:black; display:inline; }
.enrolledminiimages { height:13px; width:13px; }
#miniposttext{ font:normal 10px arial, sans-serif; }
.newsfeed { border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; background-clip:padding-box; background-color:white; min-height: 550px; }
.CRarea { overflow-y:auto; background-color: transparent; background-image: -moz-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -ms-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -o-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, .06)), to(transparent));background-image: -webkit-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: linear-gradient(top,rgba(0, 0, 0, .06),transparent); border-top: 1px solid rgba(0, 0, 0, .2); border-bottom: 1px solid rgba(0, 0, 0, .1); margin:12px -12px -7px -12px; }
.CRarea img { max-width: 100%; max-height: 350px; border-color:#ccc; border-style:solid; border-width: 0px; display:block; margin-left:auto; margin-right:auto; }
.sliderbar1, .sliderbar2 { right: 10%; border-right: 1px solid rgba(0,0,0,.2); border-left: 1px solid rgba(0,0,0,.2); border-bottom: 1px solid rgba(0,0,0,.2); border-bottom-right-radius: 4px; border-bottom-left-radius: 4px; display: none; text-align: center; opacity: 0.9; padding: 3px 7px; background-color: white; position: absolute; float: right; z-index: 2; font-size: 13px; }
.sliderbar1:hover, .sliderbar2:hover { opacity: 1; }
.sliderbar1 a:hover, .sliderbar2 a:hover { text-decoration: underline; }
.obfuscation{ height:250px; background-color:whitesmoke; background-image:none; text-align: center; }
.obfuscation img{ margin-top:38px; }
.obfuscation a{ color:gray; }
.postfooter{ color:#999; font-size:11px; text-align: right; margin:0 -13px 0 0; position:relative; top:4px;}
/* ... */

